@@ -17,6 +17,10 @@ COPY --from=builder /isaac-api/target/isaac-api.war /var/lib/jetty/webapps/isaac
 RUN chmod 755 /var/lib/jetty/webapps/*
 RUN chown jetty /var/lib/jetty/webapps/*
 
+# initialise logging for jetty (including approving third-party licensed code) and add jetty log4j config:
+RUN java -jar "$JETTY_HOME/start.jar" --add-modules=logging-log4j2 --approve-all-licenses
+COPY src/main/resources/log4j2-jetty-only.xml $JETTY_BASE/resources/log4j2.xml
+
 # prepare things so that jetty runs in the docker entrypoint
 USER jetty
 WORKDIR $JETTY_BASE
